--- a/ong-child/package.json
+++ b/ong-child/package.json
@@ -15,5 +15,9 @@
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0"
+  },
+  "dependencies": {
+    "bootstrap3": "^3.3.5",
+    "save": "^2.3.2"
   }
 }
