Js libraries from node_modules ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 ong-child/assets/css
 ong-child/assets/js
+ong-child/assets/src/js/bootstrap3.min.js
+ong-child/assets/src/js/jquery.min.js
 ong-child/node_modules
